basic pingpong_mt done

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,46 +1,42 @@
 add_library(lcw)
-target_sources(lcw PRIVATE
-        lcw.cpp
-        logger/logger.cpp
-        backend/backend.cpp
-        backend/mpi/backend_mpi.cpp)
+target_sources(lcw PRIVATE lcw.cpp logger/logger.cpp backend/backend.cpp
+                           backend/mpi/backend_mpi.cpp)
 target_include_directories(
-        lcw
-        PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
-        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+  lcw
+  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
 option(LCW_TRY_ENABLE_BACKEND_LCI "whether to enable the LCI backend" ON)
 
 find_package(
-        LCI
-        CONFIG
-        REQUIRED
-        HINTS
-        ${LCI_ROOT}
-        $ENV{LCI_ROOT}
-        PATH_SUFFIXES
-        lib/cmake
-        lib64/cmake
-)
+  LCI
+  CONFIG
+  REQUIRED
+  HINTS
+  ${LCI_ROOT}
+  $ENV{LCI_ROOT}
+  PATH_SUFFIXES
+  lib/cmake
+  lib64/cmake)
 target_link_libraries(lcw PRIVATE LCI::LCT)
 if(LCW_TRY_ENABLE_BACKEND_LCI AND NOT LCI_WITH_LCT_ONLY)
-    set(LCW_ENABLE_BACKEND_LCI ON)
-    target_link_libraries(lcw PRIVATE LCI::LCI)
+  set(LCW_ENABLE_BACKEND_LCI ON)
+  target_link_libraries(lcw PRIVATE LCI::LCI)
 else()
-    message(WARNING "LCI is not found. The LCI backend if not enabled.")
+  message(WARNING "LCI is not found. The LCI backend if not enabled.")
 endif()
 
 option(LCW_TRY_ENABLE_BACKEND_MPI "whether to enable the MPI backend" ON)
 
-if (LCW_TRY_ENABLE_BACKEND_MPI)
-    find_package(MPI)
-    if(MPI_FOUND)
-        set(LCW_ENABLE_BACKEND_MPI ON)
-        target_link_libraries(lcw PRIVATE MPI::MPI_CXX)
-    else()
-        message(WARNING "MPI is not found. The MPI backend if not enabled.")
-    endif()
+if(LCW_TRY_ENABLE_BACKEND_MPI)
+  find_package(MPI)
+  if(MPI_FOUND)
+    set(LCW_ENABLE_BACKEND_MPI ON)
+    target_link_libraries(lcw PRIVATE MPI::MPI_CXX)
+  else()
+    message(WARNING "MPI is not found. The MPI backend if not enabled.")
+  endif()
 endif()
 
 add_subdirectory(api)
