--- a/src/api/lcw_config.hpp.in
+++ b/src/api/lcw_config.hpp.in
@@ -1,6 +1,11 @@
 #ifndef LCW_LCW_CONFIG_HPP
 #define LCW_LCW_CONFIG_HPP
 
+#define LCW_VERSION @PROJECT_VERSION@
+#define LCW_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#define LCW_VERSION_MINOR @PROJECT_VERSION_MINOR@
+#define LCW_VERSION_PATCH @PROJECT_VERSION_PATCH@
+
 #cmakedefine LCW_ENABLE_BACKEND_LCI
 #cmakedefine LCW_ENABLE_BACKEND_MPI
 
