--- a/LCWConfig.cmake.in
+++ b/LCWConfig.cmake.in
@@ -1,19 +1,22 @@
-@PACKAGE_INIT@
+if (NOT TARGET LCW::LCW)
 
-LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/LCW")
-include(CMakeFindDependencyMacro)
+    @PACKAGE_INIT@
 
-find_dependency(LCI)
-find_dependency(MPI)
+    LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/LCW")
+    include(CMakeFindDependencyMacro)
 
-set_and_check(LCW_INCLUDE_DIRS "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@")
-set_and_check(LCW_LIBRARY "@PACKAGE_CMAKE_INSTALL_LIBDIR@/@CMAKE_SHARED_LIBRARY_PREFIX@lcw@CMAKE_SHARED_LIBRARY_SUFFIX@")
+    find_dependency(LCI)
+    find_dependency(MPI)
 
-add_library(LCW::LCW SHARED IMPORTED)
-set_target_properties(LCW::LCW PROPERTIES
-  IMPORTED_LOCATION ${LCW_LIBRARY}
-)
-target_include_directories(LCW::LCW INTERFACE ${LCW_INCLUDE_DIRS})
-target_link_libraries(LCW::LCW INTERFACE Threads::Threads @FABRIC@::@FABRIC@ LCW::LCT)
+    set_and_check(LCW_INCLUDE_DIRS "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@")
+    set_and_check(LCW_LIBRARY "@PACKAGE_CMAKE_INSTALL_LIBDIR@/@CMAKE_SHARED_LIBRARY_PREFIX@lcw@CMAKE_SHARED_LIBRARY_SUFFIX@")
 
-check_required_components(LCW)
+    add_library(LCW::LCW SHARED IMPORTED)
+    set_target_properties(LCW::LCW PROPERTIES
+      IMPORTED_LOCATION ${LCW_LIBRARY}
+    )
+    target_include_directories(LCW::LCW INTERFACE ${LCW_INCLUDE_DIRS})
+    target_link_libraries(LCW::LCW INTERFACE LCI::LCT)
+
+    check_required_components(LCW)
+endif()
