Allow clients to use custom spinlocks

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(lcw)
 target_sources(lcw PRIVATE lcw.cpp env.cpp logger/logger.cpp
-                           backend/backend.cpp)
+                           backend/backend.cpp util/spinlock.cpp)
 target_include_directories(
   lcw
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
