--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(lcw)
-target_sources(lcw PRIVATE lcw.cpp env.cpp logger/logger.cpp
-                           backend/backend.cpp util/spinlock.cpp)
+target_sources(
+  lcw PRIVATE lcw.cpp env.cpp logger/logger.cpp backend/backend.cpp
+              util/spinlock.cpp util/pcounter.cpp)
 target_include_directories(
   lcw
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
