--- a/src/api/lcw_config.hpp.in
+++ b/src/api/lcw_config.hpp.in
@@ -9,6 +9,7 @@
 #cmakedefine LCW_ENABLE_BACKEND_LCI
 #cmakedefine LCW_ENABLE_BACKEND_MPI
 #cmakedefine LCW_DEBUG
+#cmakedefine LCW_ENABLE_PCOUNTER
 #define LCW_CACHE_LINE @LCW_CACHE_LINE@
 
 #endif  // LCW_LCW_CONFIG_HPP
