--- a/src/api/lcw_config.hpp.in
+++ b/src/api/lcw_config.hpp.in
@@ -7,6 +7,7 @@
 #define LCW_VERSION_PATCH @PROJECT_VERSION_PATCH@
 
 #cmakedefine LCW_ENABLE_BACKEND_LCI
+#cmakedefine LCW_ENABLE_BACKEND_LCI2
 #cmakedefine LCW_ENABLE_BACKEND_MPI
 #cmakedefine LCW_DEBUG
 #cmakedefine LCW_ENABLE_PCOUNTER
