--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,11 +76,12 @@ jobs:
       - name: Configure CMake
         shell: bash
         run: |
-          cmake \
+          cmake -LA \
             -Bbuild \
             -GNinja \
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
             -DLCW_DEBUG=ON \
+            -DLCW_USE_CTEST_LAUNCHER=$(pwd)/build/_deps/lci-src/lcrun \
             .
 
       - name: Build
@@ -92,5 +93,4 @@ jobs:
         shell: bash
         run: |
             cd build
-            export PATH=_deps/lci-src/:$PATH
             ctest --extra-verbose --timeout 300 --rerun-failed --output-on-failure
